# minbar-applet

./: AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  applet.c  configure  configure.ac
data/: Makefile.am  Makefile.in
debian/: changelog  control  copyright  rules
src/: Makefile  Makefile.am  Makefile.in  applet.c
